# lidarpoint

./: CMakeLists.txt  demoeigen3.cpp  main copy 2.cpp  main copy.cpp  main.cpp
data/: 000000.pcd
include/: colorprint.cpp  colorprint.h  preprocess.h
src/: bin2pcd.cpp  preprocess.cpp
